NUTCH-3115 update to set all fields access on each POJO individually, updated JUnit tests, improved logging